--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -9,12 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipChildren="false"
-        android:layout_gravity="center"
-        android:gravity="center"
         android:clipToPadding="false"
         android:orientation="vertical"
-        android:padding="24dp"
-        android:paddingTop="10dp">
+        android:padding="20dp"
+        android:paddingTop="12dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -22,14 +20,15 @@
             android:textAlignment="center"
             android:gravity="center"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="20dp"
             android:text="REGISTER"
             android:fontFamily="@font/nunito"
-            android:textColor="@color/textColor"
+            android:textColor="@color/orangeColorSafeBoda"
             android:textAllCaps="true"
             android:textSize="20sp" />
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/firstNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="First Name">
@@ -48,6 +47,7 @@
             android:hint="Last Name">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/lastNameEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
@@ -57,9 +57,10 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Username">
+            android:hint="Phone Number">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/msisdnEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
@@ -74,7 +75,7 @@
             app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/password_edit_text"
+                android:id="@+id/passwordEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
@@ -84,25 +85,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/next_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:text="REGISTER" />
+<!--            <com.google.android.material.button.MaterialButton-->
+<!--                android:id="@+id/register_button"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_alignParentEnd="true"-->
+<!--                android:layout_alignParentRight="true"-->
+<!--                android:text="REGISTER" />-->
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/cancel_button"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
+
+            <com.kusu.loadingbutton.LoadingButton
+                android:id="@+id/register_button"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
-                android:background="@android:color/black"
-                android:layout_marginRight="12dp"
-                android:layout_toStartOf="@id/next_button"
-                android:layout_toLeftOf="@id/next_button"
-                android:text="BACK" />
+                android:layout_marginTop="20dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="REGISTER"
+                android:textColor="@color/white"
+                app:lb_buttonColor="@color/orangeColorSafeBoda"
+                app:lb_isShadowEnable="true"
+                app:lb_isCircular="false"
+                app:lb_loaderColor="@color/white"
+                app:lb_shadowColor="@color/orangeColorSafeBoda"
+                app:lb_shadowHeight="5dp" />
 
         </RelativeLayout>
     </LinearLayout>
